mdmCeneveo/src/objects/Plant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PlantCreditRepresentative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Number__c</fullName>
        <label>Customer Service Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <externalId>true</externalId>
        <label>Plant Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PlantController</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PlantManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <label>Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Postal__c</columns>
        <columns>Customer_Service_Number__c</columns>
        <columns>Plant_Controller__c</columns>
        <columns>Plant_Manager__c</columns>
        <columns>Plant_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>